-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Striped directory as subdirectory mount may not be able to cache LOOKUP lock for ROOT, and will cause extra getattr RPC for each file access. This is a bug in lmv_intent_lookup(), which replaces fid1 with stripe FID which "/" is mapped to by hash, while for striped directory, fid2 is master object FID, if they are not located on the same MDT, server will treat it as remote object, and won't reply LOOKUP lock back.
Note, even if this is fixed, user should avoid use remote directory (either plain or striped directory) as subdirectory mount, because remote object can't fetch LOOKUP lock.