lustre/mdt/mdt_internal.h
@@ -252,7 +252,9 @@ struct mdt_device {
 				   mdt_enable_striped_dir:1,
 				   mdt_enable_dir_migration:1,
 				   mdt_enable_remote_rename:1,
-				   mdt_skip_lfsck:1;
+				   mdt_skip_lfsck:1,
+				   /* subdirectory mount of remote dir */
+				   mdt_enable_remote_subdir_mount:1;
 
 				   /* user with gid can create remote/striped
 				    * dir, and set default dir stripe */
